--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "name": "02-bases",
   "version": "0.0.1",
   "description": "Esta es mi primira aplicacioón real de Node",
-  "main": "app.js",
+  "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon",
+    "build": "rimraf ./dist && tsc",
+    "start": "npm run build && node dist/app.js"
   },
   "author": "Pedro Fernandez",
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "@types/node": "^20.10.6",
+    "@types/uuid": "^9.0.7",
+    "nodemon": "^3.0.2",
+    "rimraf": "^5.0.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
     "axios": "^1.6.5",
